--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>E-commerce site</title>
   </head>
 
-  <body>
+  <body id="body" class="">
     <!-- navigation bar -->
     <nav class="bg-gray-800 h-[70px] w-full">
       <div class="max-w-[1140px] mx-auto">
@@ -37,8 +37,13 @@
               >Contact</a
             >
             <div
-              class="text-white block font-semibold hover:text-gray-400 cursor-pointer"
+              class="text-white block font-semibold hover:text-gray-400 cursor-pointer relative"
             >
+              <div
+                id="cart"
+                class="absolute top-[-10px] right-[-10px] bg-[red] text-white h-[16px] w-[16px] text-[12px] text-center rounded-[50%]"
+              ></div>
+
               <i class="fas fa-shopping-cart"></i>
             </div>
             <button
